Write attr, addClass and removeClass methods

--- a/jquery_lite/index.html
+++ b/jquery_lite/index.html
@@ -19,7 +19,7 @@
       <section class="sidebar">
         <h1>Sidebar</h1>
         <ul class="nav-list">
-          <li>first element in nav-list</li>
+          <li id="first">first element in nav-list</li>
           <li>two element in nav-list</li>
           <li>three element in nav-list</li>
           <li>four element in nav-list</li>
