--- a/jquery_lite/index.html
+++ b/jquery_lite/index.html
@@ -25,7 +25,7 @@
           <li>four element in nav-list</li>
         </ul>
       </section>
-      <section class="main">
+      <section class="main nav-list">
 
       </section>
       <section>
